# src/modules/Task/dto/task.dto.ts
@@ -1,10 +1,7 @@
 export interface taskDto {
   content: string;
   lessonId: number;
-  currentAnswerId: number;
-
 }
-
 
 export interface checkTaskDto {
   task_id: number;
